--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="styles.css"></link>
     <script defer src="index.js"></script>
     
-    <title>Document</title>
+    <title>JWS</title>
 </head>
 <body>
     <nav id="nav-bar">
