Submit button and results display working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <select id="year-selector"></select>
             <select id="circuit-selector"></select>
         </form>
-        <button id="race-button">Race!</button>
+        <form id="race-button">
+            <button id="button">Race!</button>
+        </form>
     </nav>
     <div id ="race-container">Race Container
         <div id="podium-container">Podium Container
