details button up but not functional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button id="button">Race!</button>
         </form>
     </nav>
-    <div id ="race-container">Race Container
+    <div id ="race-container">Race Container & add user instructions later
         <div id="podium-container">Podium Container
             <div class="results-container" id="first-place">
                 <div class="results" id="first-results">First place results</div>
