--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 </head>
 <body>
     <nav id="nav-bar">
-        <form id="drop-down">
-            <select id="year-selector"></select>
-            <select id="circuit-selector"></select>
-        </form>
-        <form id="race-button">
-            <button id="button">Race!</button>
-        </form>
+        <div id="menu">
+            <form id="drop-down">
+                <label for="year-selector">Year</title>
+                <select id="year-selector"></select>
+                <label for="circuit-selector">Circuit</title>
+                <select id="circuit-selector"></select>
+                <button id="button">Race!</button>
+            </form>
+        </div>
     </nav>
-    <div id ="race-container">Race Container & add user instructions later
+    <!-- <div id ="race-container">Race Container & add user instructions later -->
         <div id="podium-container">Podium Container
             <div class="results-container" id="first-place">
                 <div class="results" id="first-results">First place results</div>
@@ -35,7 +37,7 @@
                 <div class="podium" id="podium-3">Third place podium</div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
 </body>
