flexbox styling added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="styles.css"></link>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');</style>        
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="index.js"></script>
     
@@ -23,22 +24,19 @@
         </div>
     </nav>
     <!-- <div id ="race-container">Race Container & add user instructions later -->
-        <div id="podium-container">Podium Container
-            <div class="results-container" id="first-place">
-                <div class="results" id="first-results">First place results</div>
-                <div class="podium" id="podium-1">First place podium</div>
-            </div>
-            <div class="results-container" id="second-place">
-                <div class="results" id="second-results">Second place results</div>
-                <div class="podium" id="podium-2">Second place podium</div>
-            </div>
-            <div class="results-container" id="third-place">
-                <div class="results" id="third-results">Third place results</div>
-                <div class="podium" id="podium-3">Third place podium</div>
-            </div>
+    <div id="podium-container">
+        <div class="results-container" id="first-place">
+            <div class="results" id="first-results">First Place Results</div>
+            <div class="podium" id="podium-1">First Place Podium</div>
         </div>
-    <!-- </div> -->
-
-
+        <div class="results-container" id="second-place">
+            <div class="results" id="second-results">Second Place Results</div>
+            <div class="podium" id="podium-2">Second Place Podium</div>
+        </div>
+        <div class="results-container" id="third-place">
+            <div class="results" id="third-results">Third Place Results</div>
+            <div class="podium" id="podium-3">Third Place Podium</div>
+        </div>
+    </div>
 </body>
 </html>
