--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <nav id="nav-bar">
         <div id="menu">
             <form id="drop-down">
-                <label for="year-selector">Year</title>
-                <select id="year-selector"></select>
-                <label for="circuit-selector">Circuit</title>
-                <select id="circuit-selector"></select>
+                <label for="year-selector">Year<select id="year-selector"></select></label>
+                <label for="circuit-selector">Circuit<select id="circuit-selector"></select></label>
                 <button id="button">Race!</button>
             </form>
         </div>
     </nav>
-    <!-- <div id ="race-container">Race Container & add user instructions later -->
+    
+    <div id="instructions">
+        <h4>Select a year and circuit to see the race results!</h4>
+    </div>
+
     <div id="podium-container">
         <div class="results-container" id="first-place">
             <div class="results" id="first-results">First Place Results</div>
