added driver page html, css, and js

--- a/mainpage.html
+++ b/mainpage.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="styles.css"></link>
+    <link type="text/css" rel="stylesheet" href="mainpagestyles.css"></link>
     <style>@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');</style>        
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script defer src="index.js"></script>
+    <script defer src="mainpage.js"></script>
     
     <title>JWS</title>
 </head>
