driverpage axios req working

--- a/driverpage.html
+++ b/driverpage.html
@@ -14,7 +14,8 @@
     <nav>Driver List</nav>
 
     <header>Scroll through to read about your favorite drivers!</header>
-    
+    <button id="previous-page">Previous</button>
+    <button id="next-page">Next</button>
     <div id="driver-list">Driver List Div</div>
 </body>
 </html>
