previous and next buttons almost done

--- a/driverpage.html
+++ b/driverpage.html
@@ -11,7 +11,10 @@
     <title>Driver List</title>
 </head>
 <body>
-    <nav>Driver List</nav>
+    <nav>
+        <div id="title">Driver List</div>
+        <a id="homepage" href="./mainpage.html">Go back to homepage</a>
+    </nav>
 
     <header>Scroll through to read about your favorite drivers!</header>
     <button id="previous-page">Previous</button>
