added header with breakpoint styling

--- a/driverpage.html
+++ b/driverpage.html
@@ -11,6 +11,15 @@
     <title>Driver List</title>
 </head>
 <body>
+    <header id="header-container">
+        <h6 id="app-name">JWS</h6>
+        <div id="links-container">
+            <a class="header-link" id="main-page" href="./mainpage.html">Back to Homepage</a>
+            <a class="header-link" id="fastest-drivers" href="https://en.wikipedia.org/wiki/Lewis_Hamilton">Fastest Drivers</a>
+        </div>
+    </header>
+
+
     <div id="background-container">
         <nav>
             <div id="title">Driver List</div>
@@ -18,7 +27,7 @@
         </nav>
 
 
-        <header>Scroll through to read about your favorite drivers!</header>
+        <header id="directions">Scroll through to read about your favorite drivers!</header>
         
         
         <div id="page-button">
