--- a/mainpage.html
+++ b/mainpage.html
@@ -12,6 +12,15 @@
     <title>JWS</title>
 </head>
 <body>
+    <header id="header-container">
+        <h6 id="app-name">JWS</h6>
+        <div id="links-container">
+            <a class="header-link" id="driver-list" href="./driverpage.html">List of Drivers</a>
+            <a class="header-link" id="fastest-drivers" href="https://en.wikipedia.org/wiki/Lewis_Hamilton">Fastest Drivers</a>
+        </div>
+    </header>
+
+
     <nav id="nav-bar">
         <div id="menu">
             <form id="drop-down">
