--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="mainpagestyles.css"></link>
     <style>@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');</style>        
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script defer src="mainpage.js"></script>
+    <script defer src="index.js"></script>
     <title>JWS</title>
 </head>
 
