changed mainpage link in driver nav page

--- a/driverpage.html
+++ b/driverpage.html
@@ -14,7 +14,7 @@
     <header id="header-container">
         <h6 id="app-name">JWS</h6>
         <div id="links-container">
-            <a class="header-link" id="main-page" href="./mainpage.html">Back to Homepage</a>
+            <a class="header-link" id="main-page" href="./index.html">Back to Homepage</a>
             <a class="header-link" id="fastest-drivers" href="https://en.wikipedia.org/wiki/Lewis_Hamilton">Fastest Drivers</a>
         </div>
     </header>
